cluster/prod/embedded-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: embedded-api
spec:
  selector:
    matchLabels:
      app: embedded-api
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: embedded-api
        tier: backend
    spec:
      containers:
        - name: embedded-api
          image: localhost:32000/illumino-embedded-api:latest
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
          ports:
            - containerPort: 30001
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: embedded-api
  name: embedded-api-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 30001
      protocol: TCP
  selector:
    app: embedded-api
---
