cluster/prod/web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  selector:
    matchLabels:
      app: web-app
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: web-app
        tier: frontend
    spec:
      containers:
        - name: web-app
          image: localhost:32000/illumino-web-app:latest
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 31000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-app
  name: web-app-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 31000
      protocol: TCP
  selector:
    app: web-app
---
